Closed Bug 475974 Opened 17 years ago Closed 17 years ago

PPC64 nanojit fixes

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: edwsmith, Unassigned)

References

Details

Attachments

(1 file)

found while working on x64: * stack adjustment should be *4, not *sizeof(void*), since spill slots are allocated at a granularity of 4 bytes even on 64bit cpu's. * fixed the signature for DoubleVectorObject::_getNativeIntProperty * nvprof macros printed "arm" instead of "ppc", cut & paste error * s/AVMPLUS_64BIT/NANOJIT_64BIT in NativePPC.h (this patch preceds a larger rename-the-defines patch)
Attachment #359549 - Flags: review?(rreitmai)
Comment on attachment 359549 [details] [diff] [review] ppc64 nanojit fixes rick out sick
Attachment #359549 - Flags: review?(rreitmai) → review?(lhansen)
Attachment #359549 - Flags: review?(lhansen) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: