Sundry PPC-64 fixes found while working on x64 (bug 475974 r=lhansen+)

* stack adjustment should be *4, not *sizeof(void*), since spill slots are
allocated at a granularity of 4 bytes even on 64bit cpu's.

* fixed the signature for DoubleVectorObject::_getNativeIntProperty

* nvprof macros printed "arm" instead of "ppc", cut & paste error

* s/AVMPLUS_64BIT/NANOJIT_64BIT in NativePPC.h